--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@google/model-viewer": "^4.1.0",
     "next": "15.4.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "three": "^0.178.0"
+    "react-dom": "19.1.0"
   }
 }
