--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@google/model-viewer": "^4.1.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwindcss": "^4.1.11"
   }
 }
